crates/strider-analyze/tests/snapshots/v2__arm_thumb__control__nested_loops.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v11" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v13" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "12" -> "v13" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v14" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "12" -> "v14" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v13" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v19" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v19" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "21" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v19" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v23" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "22" -> "v23" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v24" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "22" -> "v24" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "21" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "26" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v24" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v27" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v27" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "28" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v29" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "28" -> "v29" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "28" -> "v27" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "26" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "31" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v23" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v29" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v33" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "32" -> "v33" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "32" -> "v11" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "31" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "35" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "35" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v33" -> "35" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "36" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "35" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "40" -> "36" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "41" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="φ r0", shape=house, fillcolor="#163030"];
  "35" -> "38" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "42" -> "38" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "43" [label="φ r0", shape=house, fillcolor="#163030"];
  "31" -> "43" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="φ r3", shape=house, fillcolor="#163030"];
  "26" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="φ r12", shape=house, fillcolor="#163030"];
  "10" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="φ r3", shape=house, fillcolor="#163030"];
  "16" -> "48" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="φ r3", shape=house, fillcolor="#163030"];
  "10" -> "54" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "56" [label="φ r3", shape=house, fillcolor="#163030"];
  "31" -> "56" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "56" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "56" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="φ r0", shape=house, fillcolor="#163030"];
  "26" -> "46" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "44" -> "46" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" -> "46" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "44" [label="φ r0", shape=house, fillcolor="#163030"];
  "10" -> "44" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "43" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "42" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "59" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "60" -> "42" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "61" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "61" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="φ r2", shape=house, fillcolor="#163030"];
  "26" -> "65" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "67" [label="φ r2", shape=house, fillcolor="#163030"];
  "21" -> "67" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "48" -> "67" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "68" [label="φ r2", shape=house, fillcolor="#163030"];
  "10" -> "68" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "70" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "69" [label="φ r2", shape=house, fillcolor="#163030"];
  "31" -> "69" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "67" -> "69" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" -> "69" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "87" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "87" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "90" -> "89" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "90" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "91" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "91" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "92" -> "88" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "92" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "92" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "92" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "85" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "94" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "94" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "96" -> "95" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "96" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "96" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "96" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
